[package]
name = "smugdancer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
axum = "0.5.13"
futures = "0.3.21"
handlebars = "4.3.3"
nanorand = "0.7.0"
serde = { version = "1.0.140", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1.20.0", features = ["full"] }
toml = "0.5.9"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
