[package]
name = "smugdancer"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "giffel",
]

[dependencies]
axum = "0.5.13"
dashmap = "5.3.4"
giffel = { version = "0.1.0", path = "giffel" }
handlebars = "4.3.3"
nanorand = "0.7.0"
parking_lot = "0.12.1"
rusqlite = { version = "0.28.0", features = ["bundled"] }
serde = { version = "1.0.140", features = ["derive"] }
thiserror = "1.0.31"
tokio = { version = "1.20.0", features = ["full"] }
toml = "0.5.9"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"

[profile.release]
debug = true
